mobile & darkmode improvements - add color-scheme meta tag on custom html. Mostly for dark scrollbar style in darkmode - make searchbar more distinguishable in darkmode - fix error where nav-path would shrink to the right of the searchbar if GENERATE_TREEVIEW is disabled - mobile improvements:   * header wraps inside word if too long   *  fragment codeblocks don't auto-wrap by default.   * reduced spacing of fragments on small screens   * memnames break and overflow better on small screens   * sidebar separator on touch devices is only 1px in sidebar only mode

--- a/doxygen-awesome.css
+++ b/doxygen-awesome.css
@@ -110,7 +110,7 @@ SOFTWARE.
     --header-foreground: var(--page-foreground-color);
 
     /* searchbar colors */
-    --searchbar-background: var(--page-background-color);
+    --searchbar-background: var(--side-nav-background);
     --searchbar-foreground: var(--page-foreground-color);
 
     /* searchbar size
@@ -134,6 +134,7 @@ SOFTWARE.
     --fragment-preprocessor: #65cabe;
     --fragment-linenumber-color: #ccc;
     --fragment-linenumber-background: #35393c;
+    --fragment-whitespace: nowrap;
 
     /* sidebar navigation (treeview) colors */
     --side-nav-background: var(--page-background-color);
@@ -517,7 +518,7 @@ iframe#MSearchResults {
  */
 
 #side-nav {
-    padding: 0 6px 0 0;
+    padding: 0 !important;
     background: var(--side-nav-background);
 }
 
@@ -535,7 +536,6 @@ iframe#MSearchResults {
 
 #nav-tree {
     background: transparent;
-    padding: var(--spacing-medium) 0;
 }
 
 #nav-tree .label {
@@ -619,6 +619,7 @@ div.header .title {
     font-weight: 600;
     font-size: 210%;
     padding: var(--spacing-medium) var(--spacing-large);
+    word-break: break-word;
 }
 
 div.header .summary {
@@ -645,7 +646,11 @@ span.mlabel {
     border: none;
     padding: 4px 9px;
     border-radius: 12px;
-    margin-right: 10px;
+    margin-right: var(--spacing-medium);
+}
+
+span.mlabel:last-of-type {
+    margin-right: 2px;
 }
 
 div.contents {
@@ -769,12 +774,31 @@ div.fragment, pre.fragment {
     padding: 14px 16px;
     background: var(--fragment-background);
     color: var(--fragment-foreground);
+    overflow-x: auto;
+}
+
+@media screen and (max-width: 767px) {
+    div.fragment, pre.fragment {
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
+    }
+
+    .contents > div.fragment, .textblock > div.fragment, .textblock > pre.fragment {
+        margin: var(--spacing-medium) calc(0px - var(--spacing-large));
+        border-radius: 0;
+    }
+
+    .memdoc > div.fragment, .memdoc > pre.fragment, dl dd > div.fragment, dl dd pre.fragment {
+        margin: var(--spacing-medium) calc(0px - var(--spacing-medium));
+        border-radius: 0;
+    }
 }
 
 code, code a, div.fragment, pre.fragment, div.fragment .line, div.fragment span {
     font-family: var(--font-family-monospace);
     font-size: var(--code-font-size);
     line-height: inherit;
+    white-space: var(--fragment-whitespace);
 }
 
 div.fragment span.keyword {
@@ -823,10 +847,10 @@ dl warning, attention, note, deprecated, bug, ...
  */
 
 dl.warning, dl.attention, dl.note, dl.deprecated, dl.bug {
-    padding: 12px;
+    padding: var(--spacing-medium);
     margin: var(--spacing-medium) 0;
     color: var(--page-background-color);
-
+    overflow: hidden;
     margin-left: 0;
     border-radius: var(--border-radius-small);
 }
@@ -916,7 +940,7 @@ a:target + h2.memtitle {
 }
 
 a:target + h2.memtitle + div.memitem {
-    box-shadow: 0 0px 10px 0 var(--primary-lighter-color);
+    box-shadow: 0 0 10px 0 var(--primary-lighter-color);
 }
 
 div.memitem {
@@ -924,6 +948,7 @@ div.memitem {
     border-bottom-right-radius: var(--border-radius-medium);
     border-bottom-left-radius: var(--border-radius-medium);
     overflow: hidden;
+    display: block !important;
 }
 
 div.memdoc {
@@ -932,7 +957,9 @@ div.memdoc {
 
 div.memproto {
     border-radius: 0;
+    overflow: auto;
     border-bottom: 1px solid var(--separator-color);
+    padding: var(--spacing-medium);
 }
 
 div.memtitle {
@@ -945,16 +972,33 @@ div.memproto table.memname {
     color: var(--page-foreground-color);
 }
 
-@media screen and (max-width: 767px) {
-    .memname td {
-        display: block;
-    }
-
-    table.mlabels .mlabels-left, table.mlabels .mlabels-right {
-        display: block;
-    }
+table.mlabels tbody, table.mlabels table, table.mlabels td, table.mlabels tr {
+    display: inline-block;
 }
 
+table.mlabels, table.mlabels > tbody {
+    display: block;
+}
+
+td.mlabels-left {
+    width: auto;
+}
+
+table.mlabels > tbody > tr:first-child {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+table.memname > tbody > tr:first-child {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.memname, .memitem span.mlabels {
+    margin: 0
+}
 /*
 reflist
  */
@@ -1115,6 +1159,7 @@ table.directory {
 
 #nav-path {
     margin-bottom: -1px;
+    width: 100%;
 }
 
 #nav-path ul {
